can't use SYNC cluster a shard SERVER-1535